# purepyodbc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci-ubuntu.yml  ci.yml  on-commit.yml  release.yml  test.yml
driver_templates/: msodbc.driver.template  mysql.driver.template  pgsql.driver.template  tds.driver.template
purepyodbc/: __init__.py  _connection.py  _constants.py  _cursor.py  _custom_types.py  _driver_manager.py  _dto.py  _enums.py  _environment.py  _errors.py  _handler.py  _odbc.py  _row.py  _typedef.py
tests/: conftest.py  test_connection.py  test_cursor.py  test_db_api_2.py  test_exceptions.py  test_purepyodbc.py  test_pyodbc_compat.py
