[tool.docformatter]
black = true
recursive = true
in-place = true
wrap-summaries = 120
wrap-descriptions = 120

[tool.poetry]
name = "purepyodbc"
version = "0.1.0"
description = "A pure python ODBC package"
authors = ["Christopher McEvoy <chris@chrismcevoy.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pre-commit = "^4.0.0"
pyodbc = { version = "^5.1.0", markers = "platform_python_implementation == 'CPython'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
