[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purepyodbc"
version = "0.1.0"
description = "A pure python ODBC package"
authors = [
    {name = "Chris McEvoy", email = "chris@chrismcevoy.net"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Database",
]

[project.urls]
Repository = "https://github.com/chrisimcevoy/purepyodbc"
Changelog = "https://github.com/chrisimcevoy/purepyodbc/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pre-commit>=4.0",
    "pyodbc>=5.2.0; platform_python_implementation == 'CPython'",
]

[tool.docformatter]
black = true
recursive = true
in-place = true
wrap-summaries = 120
wrap-descriptions = 120

[tool.mypy]
strict = true

[tool.pytest.ini_options]
xfail_strict = true

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
lint.extend-select = [
    "E",    # pycodestyle - Error
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "W",    # pycodestyle - Warning
]

[tool.uv]
package = false