[metadata]
name = purepyodbc
version = attr: purepyodbc.version
author = Christopher McEvoy
author_email = chris@chrismcevoy.net
description = A pure Python ODBC package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chrisimcevoy/purepyodbc
project_urls =
    Bug Tracker = https://github.com/chrisimcevoy/purepyodbc/issues
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database

[options]
packages = purepyodbc
python_requires = >=3.7

[options.packages.find]
where = src
